# hoomd-sph3_nnfsi

./: .gitignore  .gitmodules  README.md  addsphpath.sh  build_wolfgang.sh  buildall.sh  fast_buildall.sh  link_pgsd_module.sh  requirements.txt
helper_modules/: delete_solids_initial_timestep.py  read_input_fromtxt.py  sph_helper.py  sph_info.py
helper_modules/gsd2vtu/: auxgsd2vtu.py  export_gsd2vtu.py
hoomd-blue/: CMakeLists.txt
hoomd-blue/hoomd/: BondedGroupData.cc  BondedGroupData.h  CMakeLists.txt  CachedAllocator.h  CellList.cc  CellList.h  Communicator.cc  Communicator.h  ForceCompute.cc  ForceCompute.h  GSDDumpWriter.cc  GSDDumpWriter.h  GSDDumpWriterMPI.cc  GSDDumpWriterMPI.h  GSDReader.cc  GSDReaderMPI.cc  Integrator.cc  MeshDefinition.cc  MeshGroupData.cc  ParticleData.cc  ParticleData.h  ParticleGroup.cc  SFCPackTuner.cc  SFCPackTuner.h  SnapshotSystemData.cc  SnapshotSystemData.h  System.cc  System.h  SystemDefinition.cc  SystemDefinition.h  TextureTools.h  Trigger.h  VectorMath.h  __init__.py  logging.py  managed_allocator.h  module.cc  simulation.py  snapshot.py  state.py  (+2 more)
hoomd-blue/hoomd/nsearch/: NeighborList.cc  NeighborList.h  NeighborListBinned.cc  NeighborListStencil.cc  NeighborListTree.cc  __init__.py  module-nsearch.cc  nlist.py
hoomd-blue/hoomd/pytest/: test_custom_updater.py  test_custom_writer.py  test_dcd.py  test_local_snapshot.py  test_mesh.py  test_simulation.py  test_snapshot.py  test_state.py
hoomd-blue/hoomd/sph/: CMakeLists.txt  ComputeSPFBasicProperties.cc  ConstantForceCompute.cc  ConstantForceCompute.h  EvaluationMethodDefinition.h  KickDriftKickTV.cc  SPHBaseClass.cc  SPHBaseClass.h  SPHIntegrationMethodTwoStep.cc  SPHIntegrationMethodTwoStep.h  SPHIntegratorTwoStep.cc  SPHIntegratorTwoStep.h  SinglePhaseFlow.cc  SinglePhaseFlow.h  SinglePhaseFlowFS.cc  SinglePhaseFlowFS.h  SinglePhaseFlowGDGD.cc  SinglePhaseFlowGDGD.h  SinglePhaseFlowTV.cc  SmoothingKernel.cc  SmoothingKernel.h  SolidFluidTypeBit.h  StateEquations.cc  StateEquations.h  TwoPhaseFlow.cc  TwoPhaseFlow.h  TwoPhaseFlowTV.cc  TwoPhaseFlowTV.h  VelocityVerlet.cc  VelocityVerletBasic.cc  __init__.py  compute.py  eos.py  force.py  integrate.py  kernel.py  module-sph.cc
hoomd-blue/hoomd/sph/data/: local_access.py
hoomd-blue/hoomd/sph/methods/: methods.py
hoomd-blue/hoomd/sph/sphmodel/: __init__.py  sphmodel.py
hoomd-blue/hoomd/sph/test/: CMakeLists.txt  test_communication.cc
hoomd-blue/hoomd/test/: test_cell_list.cc  test_cell_list_stencil.cc  test_load_balancer.cc  test_pdata.cc
sph-simulations/: .gitignore
sph-simulations/00_singlephaseflow_benchmarks/: README.md
sph-simulations/00_singlephaseflow_benchmarks/01_poiseuille/: run.sh  run_tube.py  run_tube_pgsd.py
sph-simulations/00_singlephaseflow_benchmarks/02_parallel_plates/: create_input_geometries_parallel_plates.py  run.sh  run_parallel_plates.py  run_parallel_plates_pgsd.py
sph-simulations/00_singlephaseflow_benchmarks/03_couette_flow/: clean.sh  create_input_geometries_couette_flow.py  run_couette_flow_TV.py  run_couette_flow_pgsd.py
sph-simulations/00_singlephaseflow_benchmarks/04_channel_flow/: clean.sh  create_input_geometries_channel_flow.py  run_channel_flow.py  run_channel_flow_pgsd.py
sph-simulations/00_singlephaseflow_benchmarks/05_liddriven_cavity/: clean.sh  create_input_geometries_ldc.py  run.sh  run_ldc_tv.py
sph-simulations/00_singlephaseflow_benchmarks/06_spherepackings/: create_gsd_from_raw_singlecore.py  run.py  run_spherepacking.py  (+1 more)
sph-simulations/03_sphere_in_box/: run01.sh  run10.sh  run1000.sh  run15.sh  run2.sh  run20.sh  run200.sh  run25.sh  run3.sh  run30.sh  run300.sh  run35.sh  run40.sh  run45.sh  run5.sh  run50.sh  run500.sh  run8.sh
sph-simulations/04_free_surface_flow/: README.md
sph-simulations/05_io_benchmarks/: README.md
sph-simulations/07_flow_around_cylinder/: run_long_domain.py
sph-simulations/100_nn_benchmarks/: run_all.sh
sph-simulations/93_nn_benchmarks/: run_all.sh
sph-simulations/95_free_surface_flow/: README.md
sph-simulations/96_densitygradient_driven_flow/: run_all.sh
sph-simulations/98_twophaseflow_benchmarks/: run_all.sh
sph-simulations/99_singlephaseflow_benchmarks/: run_all.sh
(+250 files in other folders)
